Fix Alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -570,7 +570,7 @@ ol ul {
 
 @media only screen and (max-width: 767px) {
     .rn-section-gap {
-        padding: 80px 0;
+        padding: 80px 10px;
     }
 }
 
